# CMakeCatch2_sample

./: .gitignore  CMakeLists.txt  Readme.md
docs/: CMakeLists_original.txt
include/: TrialClass.hpp
lib/catch2/: CMakeLists.txt
src/: CMakeLists.txt  TrialClass.cpp  main.cpp
test/: CMakeLists.txt  TrialClass.test.cpp  main.cpp  main_test.cpp  trial_class_test.cpp
